docs/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secretly
  labels:
    name: secretly
