docs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secretly-service
  namespace: secretly
  labels:
    app: secretly
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: secretly
